# supervised-learning-in-action

./: .gitignore  README.md  pyproject.toml
notebook/: data_augmentation.ipynb  model_training.ipynb  pipeline.ipynb
src/app/: __init__.py  identify.py
src/app/static/css/: styles.css
src/app/templates/: identify.html
