[tool.poetry]
name = "app"
version = "0.1.0"
description = "Using Deep Learning (CNNs) to differentiate Dogs from Cats"
authors = ["Farid Delgado <delgado.farid@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
notebook = "^6.4.6"
tqdm = "^4.62.3"
matplotlib = "^3.5.0"
pandas = "^1.3.4"
keras = "^2.7.0"
tensorflow = "^2.7.0"
scipy = "^1.7.3"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
python-dotenv = "^0.19.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
